feat(api): casing audit (#366)
* feat(api): casing audit


* chore: fix linting


* chore: update integration test


* chore: update e2e test


* fix: doc update


* feat: apply ClassSerializerInterceptor globally


* fix: remove problem Exclude at class level


---------
