# apps/digital-trust-common-service/src/credential-definition/dto/create-credential-definition.dto.ts
@@ -1,3 +1,4 @@
+import { Expose } from 'class-transformer';
 import {
   IsUUID,
   IsString,
@@ -13,26 +14,33 @@ import {
 } from '../credential-definition.entity';
 
 export class CreateCredentialDefinitionDto {
+  @Expose({ name: 'tenant_id' })
   @IsUUID()
   public tenantId!: string;
 
+  @Expose()
   @IsString()
   @MaxLength(255)
   public name!: string;
 
+  @Expose()
   @IsEnum(CredentialDefinitionFormat)
   public format!: CredentialDefinitionFormat;
 
+  @Expose({ name: 'schema_definition' })
   @IsObject()
   public schemaDefinition!: Record<string, unknown>;
 
+  @Expose({ name: 'external_id' })
   @IsString()
   @MaxLength(255)
   public externalId!: string;
 
+  @Expose({ name: 'connector_type' })
   @IsEnum(CredentialDefinitionConnectorType)
   public connectorType!: CredentialDefinitionConnectorType;
 
+  @Expose()
   @IsOptional()
   @IsObject()
   public metadata?: Record<string, unknown>;
